--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,16 @@
 }
 
 .quote-box button img {
+    width: 25px;
     margin-right: 10px;
 }
 
 .quote-box button:nth-child(2) {
+    background: transparent;
+    color: #333;
+}
+
+.quote-box button:nth-child(3) {
     background: transparent;
     color: #333;
 }
